[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTumblr"
version = "0.1.2"
authors = [
  { name="Tumblr", email="accounts@tumblr.com" }
]
description = "A Python Tumblr API v2 Client"
license = { file="LICENSE" }
readme = "README.rst"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]
keywords = ["pytumblr"]
dependencies = [
    "future",
    "requests-oauthlib"
]

[project.optional-dependencies]
NOSE = ["nose"]
NOSECOV = ["nose-cov"]
MOCK = ["mock"]

[project.urls]
"Homepage" = "https://github.com/tumblr/pytumblr"
"Bug Tracker" = "https://github.com/tumblr/pytumblr/issues"
"Download" = "https://github.com/tumblr/pytumblr/releases"
